# LTV-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fastagent.config.yaml  fastagent.jsonl  fastagent.secrets.yaml  nn.txt  pyproject.toml
app/: main.py
app/core/: config.py
app/data/: prompts.json
app/routers/: agents_router.py
app/services/agents/: agent.py
app/services/agents/prompts/: brave_search.md  confidence_items.md  context_items.md  inference_items.md  keywords_extraction.md  merge_content.md  normalize_results.md  twitter_search.md  url_fetcher.md  veracity_score.md
app/services/utils/: utils.py
ltv_mcp/: main.py
static/: script.js  style.css
templates/: index.html
