[project]
name = "ltv-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fast-agent-mcp>=0.2.54",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "mcp[cli]>=1.12.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
]
